logs/2_makefile.log
[ 14%] Building CXX object tests/lib/googletest/CMakeFiles/gtest.dir/src/gtest-all.cc.o
[ 28%] Linking CXX static library ../../../lib/libgtest.a
[ 28%] Built target gtest
[ 42%] Building CXX object tests/lib/googletest/CMakeFiles/gtest_main.dir/src/gtest_main.cc.o
[ 57%] Linking CXX static library ../../../lib/libgtest_main.a
[ 57%] Built target gtest_main
[ 85%] Building CXX object tests/CMakeFiles/tests.dir/PtrCStringVectorTests.cpp.o
[ 85%] Building CXX object tests/CMakeFiles/tests.dir/__/PtrCStringVector.cpp.o
/tmp/tmp8jzuauif/student/PtrCStringVector.cpp: In member function ‘PtrCStringVector& PtrCStringVector::operator=(const PtrCStringVector&)’:
/tmp/tmp8jzuauif/student/PtrCStringVector.cpp:37:71: error: unused parameter ‘source’ [-Werror=unused-parameter]
   37 | PtrCStringVector &PtrCStringVector::operator=(const PtrCStringVector &source)
      |                                               ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
/tmp/tmp8jzuauif/student/PtrCStringVector.cpp: In member function ‘PtrCStringVector& PtrCStringVector::operator=(PtrCStringVector&&)’:
/tmp/tmp8jzuauif/student/PtrCStringVector.cpp:44:66: error: unused parameter ‘source’ [-Werror=unused-parameter]
   44 | PtrCStringVector& PtrCStringVector::operator=(PtrCStringVector&& source)
      |                                               ~~~~~~~~~~~~~~~~~~~^~~~~~
/tmp/tmp8jzuauif/student/PtrCStringVector.cpp: In member function ‘void PtrCStringVector::push_back(const char*)’:
/tmp/tmp8jzuauif/student/PtrCStringVector.cpp:51:46: error: unused parameter ‘text2Add’ [-Werror=unused-parameter]
   51 | void PtrCStringVector::push_back(const char *text2Add)
      |                                  ~~~~~~~~~~~~^~~~~~~~
/tmp/tmp8jzuauif/student/PtrCStringVector.cpp: In member function ‘PtrCStringVector PtrCStringVector::operator+(const PtrCStringVector&) const’:
/tmp/tmp8jzuauif/student/PtrCStringVector.cpp:57:70: error: unused parameter ‘anotherVector’ [-Werror=unused-parameter]
   57 | PtrCStringVector PtrCStringVector::operator+(const PtrCStringVector &anotherVector) const
      |                                              ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~
/tmp/tmp8jzuauif/student/PtrCStringVector.cpp: In member function ‘char* PtrCStringVector::operator[](std::size_t)’:
/tmp/tmp8jzuauif/student/PtrCStringVector.cpp:63:48: error: unused parameter ‘index’ [-Werror=unused-parameter]
   63 | char *PtrCStringVector::operator[](std::size_t index)
      |                                    ~~~~~~~~~~~~^~~~~
/tmp/tmp8jzuauif/student/PtrCStringVector.cpp: In member function ‘const char* PtrCStringVector::operator[](std::size_t) const’:
/tmp/tmp8jzuauif/student/PtrCStringVector.cpp:68:54: error: unused parameter ‘index’ [-Werror=unused-parameter]
   68 | const char *PtrCStringVector::operator[](std::size_t index) const
      |                                          ~~~~~~~~~~~~^~~~~
/tmp/tmp8jzuauif/student/PtrCStringVector.cpp: In member function ‘PtrCStringVector PtrCStringVector::operator&(const PtrCStringVector&) const’:
/tmp/tmp8jzuauif/student/PtrCStringVector.cpp:74:70: error: unused parameter ‘rhs’ [-Werror=unused-parameter]
   74 | PtrCStringVector PtrCStringVector::operator&(const PtrCStringVector &rhs) const
      |                                              ~~~~~~~~~~~~~~~~~~~~~~~~^~~
/tmp/tmp8jzuauif/student/PtrCStringVector.cpp: In member function ‘void PtrCStringVector::reserve(std::size_t)’:
/tmp/tmp8jzuauif/student/PtrCStringVector.cpp:85:44: error: unused parameter ‘new_capacity’ [-Werror=unused-parameter]
   85 | void PtrCStringVector::reserve(std::size_t new_capacity)
      |                                ~~~~~~~~~~~~^~~~~~~~~~~~
cc1plus: all warnings being treated as errors
make[3]: *** [tests/CMakeFiles/tests.dir/build.make:90: tests/CMakeFiles/tests.dir/__/PtrCStringVector.cpp.o] Error 1
make[3]: *** Waiting for unfinished jobs....
make[2]: *** [CMakeFiles/Makefile2:454: tests/CMakeFiles/tests.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:461: tests/CMakeFiles/tests.dir/rule] Error 2
make: *** [Makefile:312: tests] Error 2
